changing font and structure

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row flex">
+      <div class="row flex m-4 justify-content-evenly">
         <div class="col-sm-4">
           <audio
-            class="m-3"
             src="https://res.cloudinary.com/dwfyuummv/video/upload/v1679778555/friends%27%20questionnaire/is-ar-eirinn-ni-neosfainn-ce-hi_-_Brid_O_Riordan_ycsjzf.mp3"
             controls
             ></audio>
@@ -49,38 +48,38 @@
           <label for="">Your name - real or invented</label>
                 <input 
                   type="text"
-                  class="form-control"
+                  class="form-control mt-3 mb-3"
                   aria-label="First name"
                 />
                 <label for="">Your favourite book(s)</label>
                 <input 
                   type="text"
-                  class="form-control"
+                  class="form-control mt-3 mb-3"
                   aria-label="Favourite book(s)"
                 />
                 <label for="">Your favourite band(s)</label>
                 <input 
                   type="text"
-                  class="form-control"
+                  class="form-control mt-3 mb-3"
                   aria-label="Favourite band(s)"
                 />
                  <label for="" class="form-label">Webpage which inspires you </label>
-        <input type="url"  class="form-control" id="webpage" name="webpage">
+        <input type="url"  class="form-control mt-3 mb-3" id="webpage" name="webpage">
                 
       </div>
       <div class="col-sm-4">
-        <label for="" class="form-label">When you are free to meet</label>
+        <label for="" class="form-label mt-3 mb-3">When you are free to meet</label>
         <input type="datetime-local"  class="form-control" id="meetingtime" name="meetingtime">
       <label for="" class="form-label">Your favourite quotation</label>
-      <textarea class="form-control" id="" rows="4"></textarea>
+      <textarea class="form-control mt-3 mb-3" id="" rows="4"></textarea>
       <label for="" class="form-label">Your message to me</label>
-      <textarea class="form-control" id="" rows="3"></textarea>
+      <textarea class="form-control mt-3 mb-3" id="" rows="3"></textarea>
       </div>
       <div class="col-sm-4">
       <label for="" class="form-label">Your message to the world</label>
-      <textarea class="form-control" id="" rows="3"></textarea>
+      <textarea class="form-control mt-3 mb-3" id="" rows="3"></textarea>
       <label for="" class="form-label">Any other extra info</label>
-      <textarea class="form-control" id="" rows="2"></textarea>
+      <textarea class="form-control mt-3 mb-3" id="" rows="2"></textarea>
        <button type="submit" value="Submit" id="submit-button">Submit</button> 
               </div>
       
